--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,1 +1,11 @@
-<p>hero-detail works!</p>
+<div *ngIf="hero">
+  <h2>{{hero.name | uppercase}} Details</h2>
+  <div>
+    <span>id: </span>{{hero.id}}
+  </div>
+  <div>
+    <label for="name">name:
+      <input [(ngModel)]="hero.name" type="text" name="name">
+    </label>
+  </div>
+</div>
