--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -14,7 +14,7 @@ input {
 
 button {
   margin-top: 20px;
-  font-family: Arial;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #eee;
   border: none;
   padding: 5px 10px;
