--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -10,11 +10,11 @@ body {
 
 body, input[text], button {
   color: crimson;
-  font-family: Cambria, Georgia;
+  font-family: Cambria, Georgia, serif;
 }
 
 button.clear {
-  font-family: Arial;
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #eee;
   border: none;
   padding: 5px 10px;
