--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,7 @@ h1 {
   font-size: 250%;
 }
 
-h2,
-h3 {
+h2, h3 {
   color: #444;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
@@ -17,11 +16,9 @@ body {
   margin: 2em;
 }
 
-body,
-input[type="text"],
-button {
+body, input[type="text"], button {
   color: #333;
-  font-family: Cambria, Georgia;
+  font-family: Cambria, Georgia, serif;
 }
 
 * {
