--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -14,6 +14,7 @@ input {
 
 button {
   margin-top: 20px;
+  margin-right: 5px;
   font-family: Arial, Helvetica, sans-serif;
   background-color: #eee;
   border: none;
