--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -53,3 +53,17 @@
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
+
+button {
+  margin-left: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #eee;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #cfd8dc;
+}
