--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -5,17 +5,9 @@
   width: 15em;
 }
 
-.heroes a:link, .heroes a:visited, .heroes a:hover, .heroes a:active {
-  color: #3c4f58;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-}
-
 .heroes li {
-  cursor: pointer;
   position: relative;
-  left: 0;
+  cursor: pointer;
   background-color: #EEE;
   margin: .5em;
   padding: .3em 0;
@@ -29,14 +21,16 @@
   left: .1em;
 }
 
-.heroes li.selected {
-  background-color: #CFD8DC;
-  color: white;
+.heroes a {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
 }
 
-.heroes li.selected:hover {
-  background-color: #BBD8DC;
-  color: white;
+.heroes a:hover {
+  color: #607D8B;
 }
 
 .heroes .badge {
@@ -50,20 +44,30 @@
   left: -1px;
   top: -4px;
   height: 1.8em;
+  min-width: 16px;
+  text-align: right;
   margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
 
 button {
-  margin-left: 5px;
-  font-family: Arial, Helvetica, sans-serif;
   background-color: #eee;
   border: none;
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 5px;
 }
 
 button:hover {
   background-color: #cfd8dc;
+}
+
+button.delete {
+  position: relative;
+  left: 194px;
+  top: -32px;
+  background-color: gray !important;
+  color: white;
 }
